sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:3: error: not found: value lgr
  lgr=getNombreValeurs()
  ^AlgGnomeSort:4: error: not found: value i
  while (i!=lgr){
         ^AlgGnomeSort:4: error: not found: value lgr
  while (i!=lgr){
            ^AlgGnomeSort:5: error: not found: value lgr
    for (i<- 0 to lgr-2){
                  ^